# series

./: README.md  series.cabal
lib/Data/: TimeSeries.hs
