name:                series
version:             0.1.0.0
synopsis:            Time series utilities
homepage:            https://github.com/fractalcat/series
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2014 Sharif Olorin
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.TimeSeries
  build-depends:       base >=4.7 && <4.8,
                       time,
                       vector
  default-language:    Haskell2010
  hs-source-dirs:      lib
